@@ -1,5 +1,12 @@
 2001-06-04  Havoc Pennington  <hp@redhat.com>
 
+	* gtk/gtktextview.c (gtk_text_view_size_request): handle case
+	where text_view->layout == NULL by assuming its size is 0, 
+	i.e. same as if we haven't done any reflow. Reported by 
+	Hidetoshi Tajima #55448 
+
+2001-06-04  Havoc Pennington  <hp@redhat.com>
+
 	* gdk/x11/gdkevents-x11.c (gdk_event_translate): support button 6
 	and 7 for scroll left/right, from Thomas Broyer
 
